# programming-exercises

./: .gitignore  README.md
WanderingSalesman/: setup_virtualenv
WanderingSalesman/Episode_1/: Directions_1.html
WanderingSalesman/Episode_1/mcherm/go/: episode1.go  go.mod
WanderingSalesman/Episode_1/mcherm/java/: MchermEpisode1.java
WanderingSalesman/Episode_1/mcherm/javascript/: helloworld.js  mcherm_episode_1.js
WanderingSalesman/Episode_1/mcherm/python/: mcherm_episode_1.py
WanderingSalesman/Episode_1/mcherm/rust/: Cargo.toml  mcherm_episode_1.rs
WanderingSalesman/Episode_2/: Directions_2.html
WanderingSalesman/Episode_2/mcherm/go/: episode2.go  go.mod
WanderingSalesman/Episode_2/mcherm/java/: MchermEpisode2.java
WanderingSalesman/Episode_2/mcherm/javascript/: mcherm_episode_2.js
WanderingSalesman/Episode_2/mcherm/python/: mcherm_episode_2.py
WanderingSalesman/Episode_2/mcherm/rust/: mcherm_episode_2.rs
WanderingSalesman/Episode_3/: Directions_3.html
WanderingSalesman/Episode_3/mcherm/go/: episode3.go  go.mod
WanderingSalesman/Episode_3/mcherm/java/: MchermEpisode3.java
WanderingSalesman/Episode_3/mcherm/javascript/: mcherm_episode_3.js
WanderingSalesman/Episode_3/mcherm/python/: mcherm_episode_3.py
WanderingSalesman/Episode_3/mcherm/rust/: mcherm_episode_3.rs
WanderingSalesman/Episode_4/: Directions_4.html
WanderingSalesman/Episode_4/mcherm/go/: episode4.go  go.mod
WanderingSalesman/Episode_5/: Directions_5.html
WanderingSalesman/Episode_6/: Directions_6.html
WanderingSalesman/inputdata/: expected-output.json  small-map.json
WanderingSalesman/problem_statement/: WanderingSalesman.html  notes.txt  references.html
WanderingSalesman/rust/: Cargo.toml
(+15 files in other folders)
