[package]
name = "wandering_salesman"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "mcherm_episode_1"
path = "../Episode_1/mcherm/rust/mcherm_episode_1.rs"

[[bin]]
name = "mcherm_episode_2"
path = "../Episode_2/mcherm/rust/mcherm_episode_2.rs"

[dependencies]
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0.59"
