[package]
name = "wandering_salesman"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "mcherm_episode_1"
path = "../Episode_1/mcherm/rust/mcherm_episode_1.rs"

[[bin]]
name = "mcherm_episode_2"
path = "../Episode_2/mcherm/rust/mcherm_episode_2.rs"

[[bin]]
name = "mcherm_episode_3"
path = "../Episode_3/mcherm/rust/mcherm_episode_3.rs"

[[bin]]
name = "mcherm_episode_4"
path = "../Episode_4/mcherm/rust/mcherm_episode_4.rs"

[[bin]]
name = "mcherm_episode_5"
path = "../Episode_5/mcherm/rust/mcherm_episode_5.rs"

[[bin]]
name = "mcherm_episode_6"
path = "../Episode_6/mcherm/rust/mcherm_episode_6.rs"


[dependencies]
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0.59"
cached = "0.34.0"
rug = "1.15.0"
rayon = "1.5.2"
